--- a/src/conferences/rs/sass/components/_features-grid.sass
+++ b/src/conferences/rs/sass/components/_features-grid.sass
@@ -1,6 +1,4 @@
 .s-features-grid
-  // padding: clamp(40px, 4vw, 80px) 0 0
-
   .container
     max-width: 1920px
     padding: 0
@@ -83,7 +81,9 @@
           opacity: 1
         .features-grid__pop
           opacity: 1
-
+    &.hidden-sm
+      +sm
+        display: none
   &__fb
     display: block
     width: 94px
